@@ -1,5 +1,6 @@
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-encryption-0.6.0.3.ebuild 191 RMD160 c890c82f6ef74e7154bb6ab9433b6c72d05ae3d9 SHA1 b08a117513ef60dbf28cf7d5450695a1cbed8e65 SHA256 5498ec56cd87c6e2425dcaef6f8607c287f4d4f325b7f97635e29a52dcd164a8
-EBUILD kadu-encryption-0.6.5.ebuild 201 RMD160 d952c28d1087ebe918238e5a50cb8b9cfeae266b SHA1 d0c04b5582b69ff014fe6e9aa156bbfcad5a109b SHA256 9d39b21602e40de06151bd0b0c20359c47902a9f680220da0b5c81117d368adc
-MISC ChangeLog 920 RMD160 17d9a07c8ad1dbc960e7d1a2537ab6ded591337d SHA1 e0f9add9a1974927f0e38a5a4806a504af170127 SHA256 9a8f3e34c8e15263fdebc7275d11c54d22f19d358133cc411fb7ae3f8e2af9ac
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-encryption-0.6.0.3.ebuild 320 RMD160 63506a5af64262ff3ed149e2be5b6c37746b3d9d SHA1 17986ab70391de0bfa337d4cae4e20a0158d6c5a SHA256 b5a848ea2759ce79482f3703dc3f98ced8e7c2bd3ebe74558727ad9492cd03d0
+EBUILD kadu-encryption-0.6.5.1.ebuild 295 RMD160 58dfaf2b8d2fb3286f714916e37d56f3c6ed8493 SHA1 d84678e953c52c810bbaa5231ed582902243c39f SHA256 130811a91f2f3d464fb149381f0545d274fab91bc9ab0fd4137db8b0e5661219
+MISC ChangeLog 1141 RMD160 5f4afa2b9dbcea3d491e8380824a50b71c4f2c7a SHA1 e608d431418dfd944aa93d6280e73f6a2aa11069 SHA256 df9bf9698e8a110b564e002ff1f2509ab7236ae3db52129e2e6854f8ff38a19c
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
