@@ -1,6 +1,6 @@
-#
-# PACKAGE INFORMATION
-#
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
 
 inherit kadu-base
 
